buildscript {
  ext {
    springBootVersion = "2.7.18"
  }

  repositories {
    mavenLocal()
    mavenCentral()
    maven { url "https://repo.spring.io/release" }
    maven { url "https://repo.spring.io/milestone" }
    maven { url "https://repo.spring.io/snapshot" }
    maven { url "https://plugins.gradle.org/m2/" }
    jcenter()
  }

  dependencies {
    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
    classpath "gradle.plugin.com.github.spotbugs.snom:spotbugs-gradle-plugin:4.7.0"
    classpath "com.netflix.nebula:gradle-ospackage-plugin:8.4.1"
	classpath "org.owasp:dependency-check-gradle:8.2.1"
  }
}

repositories {
  mavenLocal()
  mavenCentral()
  maven { url "https://repo.spring.io/release" }
  maven { url "https://repo.spring.io/milestone" }
  maven { url "https://repo.spring.io/snapshot" }
}

// Project.version info (upgrade version when needed)
group = "org.ihtsdo.refsetservice"
version = "1.0.2"

// Extra Properties
ext {

	// always use "-SNAPSHOT" for versionTag except for release commits
	versionTag = "-SNAPSHOT"
	versionNumber = version

	if (!project.hasProperty("debAppName")) {

		if (System.getenv("DEB_APP_NAME") != null) {
			debAppName = System.getenv("DEB_APP_NAME")
		} else {
			debAppName = "snomed-refset-service"
		}
	}

	if (!project.hasProperty("buildNumber")) {

		if (System.getenv("BUILD_NUMBER") != null) {
			buildNumber = "~" + System.getenv("BUILD_NUMBER")
		} else {
			buildNumber = ""
		}
	} else {
		buildNumber = "~" + buildNumber
	}

	// ignore the build number if this is not a Snapshot version
	if (versionTag != "-SNAPSHOT") {
		buildNumber = ""
	}

	// Parameters
	if (!project.hasProperty("inputName")) {
    	inputName = "na"
	}
	if (!project.hasProperty("filePath")) {
    	filePath = "na"
	}
}

// Plugins
apply plugin: "java"
apply plugin: "eclipse"
apply plugin: "com.github.spotbugs"
apply plugin: "org.springframework.boot"
apply plugin: "checkstyle"
/*
 * The dependency management plugin remains a transitive dependency of spring-boot-gradle-plugin
 * so there�s no need for it to be listed as a classpath dependency in the buildscript configuration.
 */
apply plugin: "io.spring.dependency-management"
apply plugin: "maven-publish"
apply plugin: "application"
apply plugin: "nebula.deb"
apply plugin: "nebula.ospackage"
apply plugin: "org.owasp.dependencycheck"

mainClassName = "org.ihtsdo.refsetservice.Application"

// apply the version tag to the project.version
version = version + versionTag

sourceCompatibility = 17
targetCompatibility = 17

springBoot {
    // generate file META-INF/build-info.properties during the build
    // TODO: need an explanation of why/what this is for
    buildInfo()
}

configurations.all {
   exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
   resolutionStrategy {
    force "com.google.guava:guava:33.0.0-jre"
   }
}

ospackage {

	packageName = debAppName
	// apply the build number to the ospackage.version
    version = versionNumber + buildNumber

	println '***** project.name: ' + project.name
	println '***** project.version: ' + project.version
	println '***** debAppName: ' + debAppName
	println '***** versionNumber: ' + versionNumber
	println '***** buildNumber: ' + buildNumber
	println '***** ospackage version: ' + version

    from('build/libs') {
	    into "/opt/${debAppName}/"
	    rename { String fileName ->
	    		println '***** fileName: ' + fileName
	            fileName.replace("-${project.version}", "")
    	}
 	}

	from('src/debian/control') {
		into '/DEBIAN/'
	}

	link("var/log/${debAppName}", "/var/opt/${debAppName}/log")
}

// overrides for spring boot dependency versions
ext['log4j2.version'] = '2.20.0'
ext['tomcat.version'] = '9.0.106'
ext['snakeyaml.version'] = '2.2'
ext['com.h2database']= 'h2:2.1.210'

// Dependencies - https://docs.gradle.org/current/userguide/declaring_dependencies.html
dependencies {

  // NOTE: "spring-boot-starter-web" must be the first dependency
  implementation "org.springframework.boot:spring-boot-starter-web"

  // resteasy required for delete api call with entity
  implementation "org.jboss.resteasy:resteasy-client:5.0.9.Final"
  implementation "org.jboss.resteasy:resteasy-jackson2-provider:5.0.9.Final"

  implementation "org.springframework:spring-web:5.3.39"
  implementation "org.springframework:spring-webmvc:5.3.39"
  implementation "org.springframework.boot:spring-boot-starter-log4j2"
  implementation "org.springframework.boot:spring-boot-devtools"
  implementation "org.springframework.boot:spring-boot-starter-actuator"
  implementation "org.springframework.boot:spring-boot-starter-cache"
  implementation "org.springframework.boot:spring-boot-starter-jersey"
  implementation "org.springframework.boot:spring-boot-properties-migrator"
  implementation "org.springframework.boot:spring-boot-starter-jdbc"
  implementation "org.springframework.boot:spring-boot-starter-tomcat"
  implementation "org.springframework.session:spring-session-core"
  implementation "org.springframework.session:spring-session-jdbc"
  implementation "org.springframework.security:spring-security-core:5.8.16"
  implementation "org.springframework.security:spring-security-crypto:5.8.16"
  implementation "org.springframework.security:spring-security-web:5.8.16"
  implementation "org.springframework.cloud:spring-cloud-starter-consul-config"
  implementation "org.springframework.cloud:spring-cloud-starter-consul-discovery"
  implementation "org.springframework.cloud:spring-cloud-starter-vault-config"
  implementation "org.springframework:spring-aop"
  implementation "org.bouncycastle:bcprov-jdk18on:1.78"
  implementation "joda-time:joda-time:2.12.7"  

  // Database
  implementation "org.flywaydb:flyway-mysql:8.5.3"
  implementation "com.mysql:mysql-connector-j:8.2.0"

  // Hibernate
  implementation "org.hibernate:hibernate-core:5.6.15.Final"
  implementation "org.hibernate.search:hibernate-search-mapper-orm:6.0.11.Final"
  implementation "org.hibernate.search:hibernate-search-backend-lucene:6.0.11.Final"
  implementation "org.hibernate.search:hibernate-search-backend-elasticsearch:6.0.11.Final"
  implementation "org.hibernate:hibernate-hikaricp:5.5.9.Final"
  implementation "com.fasterxml.jackson.datatype:jackson-datatype-hibernate5"

  // Springfox is deprecated
  // implementation "io.springfox:springfox-boot-starter:3.0.0"
  // implementation "io.springfox:springfox-swagger-ui:3.0.0"
  implementation "org.springdoc:springdoc-openapi-ui:1.8.0"
  
  // Others
  implementation "org.aspectj:aspectjweaver:1.9.2"
  implementation "org.apache.commons:commons-text:1.10.0"
  implementation "com.fasterxml.jackson.core:jackson-core:2.19.1"
  implementation "org.reflections:reflections:0.9.11"
  implementation "javax.ws.rs:javax.ws.rs-api:2.1.1"
  implementation "com.sun.mail:javax.mail:1.6.2"
  implementation "commons-cli:commons-cli:1.4"
  implementation "cglib:cglib:3.3.0"
  implementation "com.amazonaws:aws-java-sdk-s3:1.12.633"

  implementation "net.sf.ehcache:ehcache:2.10.6"

  // Security
  implementation "com.auth0:java-jwt:3.8.3"
  implementation "com.auth0:jwks-rsa:0.9.0"
  
  // runtime only
  testRuntimeOnly "com.h2database:h2"

  // test dependencies
  testImplementation "org.springframework.boot:spring-boot-starter-test"
  spotbugs "com.github.spotbugs:spotbugs:4.8.0"
  testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
  testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.0"
  testImplementation "org.testcontainers:mysql:1.20.0"
}

dependencyManagement {
  imports {
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.9"
  }
}

// SpotBugs and CheckStyle
spotbugs {
    ignoreFailures = false
    showStackTraces = true
    showProgress = true
    // includeFilter = file("include.xml")
    excludeFilter = file("config/spotbugs/exclude.xml")
    // onlyAnalyze = [ "com.foobar.MyClass", "com.foobar.mypkg.*" ]
    // jvmArgs = [ "-Duser.language=ja" ]
}
spotbugsMain {
    enabled = true
    reports {
        xml.enabled = false
        html.enabled = true
    }
}
spotbugsTest {
    enabled = true
    reports {
        xml.enabled = false
        html.enabled = true
    }
}

checkstyle {
  // config = resources.text.fromFile(file("${project.rootDir}/config/checkstyle/checkstyle.xml"))
  toolVersion = "10.3.1"
  ignoreFailures = true
  checkstyleMain.exclude "**/package-info.java"
  checkstyleTest.exclude "**/package-info.java"

  // end temp
  configProperties = [
    "checkstyle.cache.file"         : rootProject.file(".out/checkstyle/checkstyle.cache"),
    "checkstyle.suppressions.file"  : rootProject.file("config/checkstyle/suppressions.xml"),
    "checkstyle.header.file"        : "",
    "checkstyle.regexp.header.file" : "",
    "checkstyle.importcontrol.file" : ""
  ]
}
tasks.withType(Checkstyle) {
  ignoreFailures = true
  reports {
    xml.required = false
    html.required = true
    html.stylesheet resources.text.fromFile("config/checkstyle/checkstyle-report.xsl")
  }
}

dependencyCheck {
    failBuildOnCVSS = 7.0
    format = 'JSON'
    outputDirectory = file("$buildDir/reports/dependency-check")
    suppressionFile = file("dependencies.xml")
}

test {
   // Use junit platform for unit tests
   systemProperty "spring.profiles.active", "test"
   useJUnitPlatform()
   //testLogging {
   //  showStandardStreams = true
   //}
   exclude "**/*IntegrationTest*"
}

// ./gradlew reindex
task reindex(type: JavaExec) {

   classpath = sourceSets.main.runtimeClasspath
   main = "org.ihtsdo.refsetservice.GeneratorApplication"
   systemProperties System.getProperties()
   // arguments to pass to the application
   args ("reindex")
   jvmArgs "-Xmx8G"
}

// ./gradlew migrateRttRefset -PfilePath=src/test/resources/migration/refset/GeneralDentistrySingleVersion.txt
task migrateRttRefset(type: JavaExec) {

   classpath = sourceSets.main.runtimeClasspath
   main = "org.ihtsdo.refsetservice.GeneratorApplication"
   systemProperties System.getProperties()
   // arguments to pass to the application
   args ("migrateRttRefset")
   jvmArgs "-Xmx8G"
}

// Uncomment the manifest entry to specify the start class
bootJar {
  //  manifest {
  //    attributes "Start-Class": "org.ihtsdo.refsetservice.application.AbcApplication"
  // }
}

// We can launch via spring boot by simply running "java -jar *.jar"
task install(dependsOn: 'publishToMavenLocal')

tasks.named("startScripts").configure { dependsOn("bootJar") }
tasks.named("distTar").configure { dependsOn("bootJar") }
tasks.named("distZip").configure { dependsOn("bootJar") }
tasks.named("buildDeb").configure { dependsOn("bootJar", "jar") }
